--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
      "name": "Ebube's Portfolio",
      "icons": [
           {
-               "src": "",
+               "src": "profile.ico",
                "sizes": "64x64 32x32 24x24 16x16",
                "type": "image/x-icon"
           }
